--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- 
+  "homepage":"https://kordianbreitenbach.github.io/crudapp",
   "name": "crudapp",
  
   "version": "0.1.0",
@@ -45,7 +45,8 @@
    
   "start": "react-scripts start",
  
-   
+  "predeploy":"npm run build",
+  "deploy":"gh-pages -d build",
   "build": "react-scripts build",
  
    
